k3s/webui/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-deployment
  namespace: webui
  labels:
    app: webui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webui
  template:
    metadata:
      labels:
        app: webui
    spec:
      containers:
      - name: webui
        image: mtr.external.otc.telekomcloud.com/llxp/chain-factory-webui:1.0.1
        ports:
        - containerPort: 8000
        securityContext:
          runAsUser: 101
          runAsGroup: 101
          runAsNonRoot: true
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
