k3s/webui/headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webui-headless
  namespace: webui
spec:
  # clusterIP: None
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  selector:
    app: webui
