k3s/webui/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: webui-ingress
  namespace: webui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: webui.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webui-headless
                port:
                  number: 8000
